--- a/index.html
+++ b/index.html
@@ -17,6 +17,37 @@
                 <div class="separator"></div>
                 <button>Get Device Location</button>
             </section>
+            <section class="weather-part">
+                <img src="Icons/cloud.png" alt="Weather Icon"> 
+                <div class="temp">
+                    <span class="numb">13</span>
+                    <span class="deg">°</span>C
+                </div>
+                <div class="weather">Broken clouds</div>
+                <div class="location">
+                    <i class="bx bx-map"></i>
+                    <span>Jodhpur, Rajasthan</span>
+                </div>
+                <div class="bottom-details">
+                    <div class="column feels">
+                        <i class="bx bxs-thermometer"></i>
+                        <div class="details">
+                            <div class="temp">
+                                <span class="numb-2">17</span>
+                                <span class="deg">°</span>C
+                            </div>
+                            <p>Feels like</p>
+                        </div>
+                    </div>
+                    <div class="column humidity">
+                        <i class="bx bxs-droplet-half"></i>
+                        <div class="details">
+                            <span>84%</span>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+                </div>    
+            </section>
         </div>
     </body>
 </html>
